CMP - Option Edit View: Fixed vertical alignment

--- a/src/component/view/option-edit/style.scss
+++ b/src/component/view/option-edit/style.scss
@@ -14,7 +14,6 @@
         // Expand to remaining height
         display: flex;
         flex-direction: column;
-        justify-content: center;
 
         .react-codemirror2,
         .datagrid {
